# movie-barcode-generator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
res/: res.qrc
res/style/: style.qss
src/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  barcode_view.cpp  barcode_view.h  central_widget.cpp  central_widget.h  file_browser_dock.cpp  file_browser_dock.h  file_browser_model.h  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h
src/gui/model/: file_browser_model.cpp  media_filter_proxy.cpp  media_filter_proxy.h
src/gui/view/: barcode_view.cpp  barcode_view.h
src/gui/widget/: central_widget.cpp  central_widget.h  file_browser_dock.cpp
src/utils/: CMakeLists.txt  constants.h  exceptions.h  logger.cpp  logger.h  theme_manager.h
